página de configuração de servidor

--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: light;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
@@ -25,8 +25,6 @@ a:hover {
 body {
   margin: 0;
   padding: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -60,9 +58,8 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -77,4 +74,84 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+
+.padrao-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background: #f1f1f1;
+  margin: 0;
+}
+
+.padrao-form {
+  background: white;
+  font-family: "Roboto", sans-serif;
+  padding: 2rem;
+  border-radius: 10px;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+}
+
+.padrao-form label {
+  margin-bottom: 0.1rem;
+  font-weight: bold;
+  color: #555;
+  text-align: left;
+}
+
+.padrao-form h2 {
+  margin-bottom: 1.5rem;
+  text-align: center;
+  color: #333;
+}
+
+.padrao-form img {
+  width: 150px;
+  height: auto;
+  background-size: cover;
+  margin: 0 auto 0;
+}
+
+.padrao-form input {
+  margin-bottom: 1rem;
+  padding: 10px;
+  font-size: 1rem;
+  border: 1px solid #c7c7c7;
+  border-radius: 6px;
+}
+
+.padrao-form button {
+  background: #007bff;
+  color: white;
+  padding: 10px;
+  font-size: 1rem;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+.padrao-form button:hover {
+  background: #0056b3;
+}
+
+.error-msg {
+  color: red;
+  text-align: center;
+  margin-top: 1rem;
+  font-size: 0.9rem;
+}
+
+.padrao-form::after {
+  content: "Sistema de Pesquisa de CPF e CNPJ - UNIPAMPA";
+  display: block;
+  text-align: center;
+  color: #888;
+  font-size: 0.9rem;
+  margin-top: 2rem;
 }
