--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Roboto", sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -63,6 +63,8 @@ button:focus-visible {
   text-align: center;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -90,7 +92,7 @@ button:focus-visible {
   background: white;
   font-family: "Roboto", sans-serif;
   padding: 2rem;
-  border-radius: 10px;
+  border-radius: 6px;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
   width: fit-content;
   display: flex;
@@ -105,7 +107,7 @@ button:focus-visible {
 }
 
 .padrao-form h2 {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
   text-align: center;
   color: #333;
 }
@@ -147,11 +149,23 @@ button:focus-visible {
   font-size: 0.9rem;
 }
 
+.sucesso {
+  color: green;
+  text-align: center;
+  font-size: 0.95rem;
+}
+
+.erro {
+  color: red;
+  text-align: center;
+  font-size: 0.95rem;
+}
+
 .padrao-form::after {
   content: "Sistema de Pesquisa de CPF e CNPJ - UNIPAMPA";
   display: block;
   text-align: center;
   color: #888;
   font-size: 0.9rem;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
