--- a/src/style.css
+++ b/src/style.css
@@ -324,3 +324,66 @@ button:focus-visible {
   flex-direction: column;
   gap: 0.5px;
 }
+
+/* Home */
+.home-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  min-width: 100%;
+  background-color: #f7f9fb;
+  font-family: 'Roboto', sans-serif;
+}
+
+.home-header {
+  background-color: #00a859;
+  color: white;
+  padding: 1rem 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.09);
+}
+
+.user-info {
+  font-weight: bold;
+}
+
+.home-header button {
+  background-color: #fff;
+  color: #b80404;
+  border: none;
+  padding: 8px 16px;
+  font-weight: bold;
+  border-radius: 10px;
+  font-size: 0.9rem;
+  box-shadow: inset 0 2px 2px rgba(0,0,0,0.18);
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+.home-header button:hover {
+  background-color: #e6e6e6;
+}
+
+.home-main {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  padding: 2rem;
+}
+
+.home-footer {
+  background-color: #ddd;
+  box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.08);
+  padding: 1rem;
+  text-align: center;
+  font-size: 0.95rem;
+  color: #444;
+}
+
+button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
